Working version, updates.

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,8 @@ body {
 #uploadResult,
 #imageDisplay,
 #section_2,
-#section_1 {
+#section_1,
+#section_0 {
   width: 100%;
   display: flex;
   align-items: center;
@@ -35,7 +36,8 @@ body {
   justify-content: center;
 }
 
-#section_2 {
+#section_2,
+#section_1 {
   display: none;
 }
 
@@ -45,28 +47,31 @@ body {
   max-width: 320px;
   min-height: 319px;
   max-height: 320px;
-  /* display: none; */
-  justify-content: center;
-  border-radius: 310px;
   align-items: center;
+  border-radius: 310px;
+  justify-content: center;
   background-color: silver;
+  box-shadow: 0px 0px 13px 0px black;
+}
+
+#previewUserImage {
+  cursor: pointer;
 }
 
 .upload_form_file_input {
-  border: 0px;
+  border: 1px solid gray !important;
   padding: 0px;
   margin: 0px;
   border: 0px;
   margin: 0px;
   cursor: pointer;
   padding: 50px 30px;
-  background-color: #00621b;
   border-radius: 10px;
+  background-color: #cff5d9;
 }
 
 #uploadForm {
   display: flex;
-  margin-top: 20px;
   align-items: center;
   flex-direction: column;
   justify-content: center;
@@ -90,6 +95,7 @@ body {
 #create_another_button,
 .downloadButtonStyle,
 #details_next_button,
+#continueButton,
 #uploadFormButton {
   color: white;
   cursor: pointer;
@@ -98,7 +104,7 @@ body {
   font-weight: bold;
   text-align: center;
   padding: 10px 20px;
-  border-radius: 10px;
+  border-radius: 0px;
   margin-bottom: 20px;
   border: 1px solid silver;
   background-color: #00621b;
@@ -138,7 +144,7 @@ body {
   width: 50%;
   font-size: 14px;
   text-align: left;
-  color: #535353;
+  color: #2c2c2c;
   padding-bottom: 7px;
 }
 
@@ -204,6 +210,22 @@ body {
   gap: 10px;
 }
 
+.nav_parent_container {
+  width: 100%;
+  background-color: #b5ffca;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav_parent_container_text_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+}
+
 .footer_social_media_links_parent {
   width: 50%;
   padding: 5px 0px;
@@ -265,7 +287,7 @@ body {
   }
 
   .text_input_label_1 {
-    width: 70%; 
+    width: 70%;
   }
 }
 
